<resources>
    <string name="key_language_code" translatable="false">key_language_code</string>
    <string name="key_show_notifications" translatable="false">key_show_notifications</string>
    <string name="f_arabic" translatable="false">عربي</string>
    <string name="f_english" translatable="false">English</string>
    <string name="app_name">Inpoint</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="points">Points</string>
    <string name="level">Level</string>
    <string name="badges">Badges</string>
    <string name="see_all">See All</string>
    <string name="followers">Followers</string>
    <string name="like">Like</string>
    <string name="likes">Likes</string>
    <string name="comment">Comment</string>
    <string name="verify">Verify</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="write_a_post">Write a post</string>
    <string name="comments">comments</string>
    <string name="reply">Reply</string>
    <string name="share">Share</string>
    <string name="permission_not_allowed">You should enable permission to get access</string>
    <string name="photo">Photo</string>
    <string name="phone">Phone</string>
    <string name="video">Video</string>
    <string name="event">Event</string>
    <string name="check_in">Check in</string>
    <string name="feedback">Feedback</string>
    <string name="live">Live</string>
    <string name="post">Post</string>
    <string name="course_name">Course Name :</string>
    <string name="take_course">Take course</string>
    <string name="about_instructor">About Instructor:</string>
    <string name="more_details">more details</string>
    <string name="introduction">Introduction</string>
    <string name="outline">Outline</string>
    <string name="review">Review</string>
    <string name="student">Student</string>
    <string name="about_judegement">About judegement</string>
    <string name="course_rating">Course Rating</string>
    <string name="events">Events</string>
    <string name="create_event">Create Event</string>
    <string name="select">Select</string>
    <string name="search_by_title_or_by_author_name">Search by title or by author name</string>
    <string name="show_less">Show less</string>
    <string name="show_more">Show more</string>
    <string name="resources_funding">Resources/Funding</string>
    <string name="resources">Resources</string>
    <string name="funding">Funding</string>
    <string name="sponsor">Sponsor</string>
    <string name="unsponsor">Unsponsor</string>
    <string name="sort_by_category">Sort by category</string>
    <string name="participate">Participate</string>
    <string name="replies">Replies</string>
    <string name="GOOGLE_API_KEY">AIzaSyBcjKpWU_vPU1DX0-hUjv4VUjNhQOMl_UM</string>
    <string name="media_url_mp4">http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4
    </string>
    <string name="login">Login</string>
    <string name="education_and_work"><![CDATA[Education & work]]></string>
    <string name="profile_info">Profile Info</string>
    <string name="public_view">Public</string>
    <string name="private_view">Private</string>
    <string name="dialog_ok">OK</string>
    <string name="delete">Delete</string>
    <string name="create_an_event">Create An event</string>
    <string name="title">Title</string>
    <string name="post_hint">What do you want to talk about?</string>
    <string name="location">Location...</string>
    <string name="details">Details..</string>
    <string name="select_category">Select Category</string>
    <string name="select_types">Select Types</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="apply">Apply</string>
    <string name="youtube">Youtube</string>
    <string name="vimeo">Vimeo</string>
    <string name="type_needed">Needed</string>
    <string name="type_completed">Completed</string>
    <string name="partners">Partners</string>
    <string name="organaization">Organization</string>
    <string name="fundation">Funding</string>
    <string name="dates">Dates</string>
    <string name="date">Date</string>
    <string name="website">Website</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="type">Type</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="from_time">From Time</string>
    <string name="to_time">To Time</string>
    <string name="notification">Notification</string>
    <string name="by">By :</string>
    <string name="lessons">Lessons</string>
    <string name="preview">Preview</string>
    <string name="tab_users">Users</string>
    <string name="tab_companies">Companies</string>
    <string name="tab_teams">Teams</string>
    <string name="tab_startups">Startups</string>
    <string name="tab_post">Posts</string>
    <string name="tab_event">Events</string>
    <string name="my_teams">My Teams</string>
    <string name="all_teams">All Teams</string>
    <string name="search_teams">Search Teams</string>
    <string name="add_new_team">add new team</string>
    <string name="join_team">Join team</string>
    <string name="delete_team">Delete Team</string>
    <string name="view_team">View Team</string>
    <string name="view_requests">View Requests</string>
    <string name="pending">Pending</string>
    <string name="cancel">Cancel</string>
    <string name="team_name">Team name</string>
    <string name="public_team">Public</string>
    <string name="private_team">Private</string>
    <string name="save">Save</string>
    <string name="team_name_is_required">Team name is required</string>
    <string name="team_creation_failed">Team creation failed</string>
    <string name="team_created">Team created</string>
    <string name="members">Members</string>
    <string name="team_members">Team members</string>
    <string name="admin">Admin</string>
    <string name="level_colon">Level:</string>
    <string name="active">active</string>
    <string name="member_name">Member Name</string>
    <string name="action_plan">Action Plan</string>
    <string name="tasks">Tasks</string>
    <string name="projects">Projects</string>
    <string name="files">Files</string>
    <string name="messages">Messages</string>
    <string name="name_code">Name \n Code</string>
    <string name="type_client">Type \n Client</string>
    <string name="sde_date">Start Date \n Due Date \n End Date</string>
    <string name="actions">Actions</string>
    <string name="name_predecessor">Name \n Predecessor</string>
    <string name="estimated_hour">Estimated hour</string>
    <string name="save_changes">Save Changes</string>
    <string name="size">Size</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="users">Users</string>
    <string name="user_is_required">User is required</string>
    <string name="name_required">Name *</string>
    <string name="code">Code</string>
    <string name="summary_required">Summary *</string>
    <string name="start_date_required">Start Date *</string>
    <string name="due_date_required">Due Date *</string>
    <string name="end_date_required">End Date *</string>
    <string name="new_project">New Project</string>
    <string name="client">Client</string>
    <string name="end_date">End Date</string>
    <string name="fill_required_fields">Please fill all required fields</string>
    <string name="project_creation_failed">Project creation failed</string>
    <string name="version">Version</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="delete_post_verification">Are you sure you want to delete the post?</string>
    <string name="delete_commnent_verification">Are you sure you want to delete the comment?</string>
    <string name="new_task">New Task</string>
    <string name="edit_project">Edit Project</string>
    <string name="status_required">Status *</string>
    <string name="predecessor">Predecessor</string>
    <string name="project">Project</string>
    <string name="none">NONE</string>
    <string name="estimated_hours">Estimated Hours</string>
    <string name="quite">Quit</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="team">Team</string>
    <string name="notes">Notes</string>
    <string name="select_members">Select Members</string>
    <string name="assigned_to_required">Assigned To *</string>
    <string name="task_creation_failed">Task creation failed</string>
    <string name="edit_task">Edit Task</string>
    <string name="education">Education</string>
    <string name="work">Work</string>
    <string name="certifications">Certifications</string>
    <string name="school_required">School *</string>
    <string name="description_required">Description *</string>
    <string name="grade">Grade</string>
    <string name="activities">Activities</string>
    <string name="company_required">Company *</string>
    <string name="position_required">Position *</string>
    <string name="from_required">From *</string>
    <string name="to">To</string>
    <string name="certification">Certification</string>
    <string name="present">Present</string>
    <string name="delete_confirmation">Are you sure, you want to delete ?</string>
    <string name="signup">Sign up</string>
    <string name="forgot_your_password">forgot your password?</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="person">Person</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="mm_dd_yyyy">MM/dd/yyyy</string>
    <string name="email">Email</string>
    <string name="become_a_member">Become a member</string>
    <string name="reset_password">Reset Password</string>
    <string name="username">Username</string>
    <string name="level_1">Level:</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_gallery">Choose from Gallery</string>
    <string name="choose_your_profile">Choose your profile picture</string>
    <string name="std_applied">Students Applied</string>
    <string name="remove_course">Remove Course</string>
    <string name="register">Register</string>
    <string name="file_name_required">Please enter file name</string>
    <string name="pick_file">Please pick a file</string>
    <string name="enter_file_desc">Please enter file description</string>
    <string name="cannot_delete_file">You cannot delete this file</string>
    <string name="permission_denied">Permission denied</string>
    <string name="download_failed">Download failed you should allow permission to storage</string>
    <string name="downloading">Downloading...</string>
    <string name="download_complete">Download Complete</string>
    <string name="choose_audio">Choose Audio</string>
    <string name="choose_your_file">Choose Your File</string>
    <string name="choose_video">Choose Video</string>
    <string name="choose_other_file">Choose other file</string>
    <string name="choose_profile_pic">Choose your profile picture</string>
    <string name="unable_to_pick">Unable to pick file</string>
    <string name="failed">Failed</string>
    <string name="delete_confirm_member">Are You sure, you want to delete this team member ?</string>
    <string name="cannot_del_proj">You cannot delete this project</string>
    <string name="confirm_accept_request">Are you sure you want to accept request?</string>
    <string name="confirm_delete_request">Are you sure you want to delete request?</string>
    <string name="cannot_del_task">you cannot delete this task</string>
    <string name="logout">Logout</string>
</resources>